--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
+  "homepage": ".",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
